--- a/myapp/templates/registration.html
+++ b/myapp/templates/registration.html
@@ -51,7 +51,7 @@
                     <div class="mb-3">
                         <label for="role" class="form-label">Role</label>
                         <select name="role" id="role" class="form-select" required>
-                            <option value="Select">-- Select Role --</option>
+                            <option value="USER">-- Select Role --</option>
                             <option value="USER">User</option>
                         </select>
                     </div>
