--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -52,7 +52,7 @@
                         <label for="role" class="form-label">Role</label>
                         <select name="role" id="role" class="form-select" required>
                             <option value="USER">-- Select Role --</option>
-                            <option value="USER">User</option>
+                            <option value="USER">USER</option>
                         </select>
                     </div>
 
